@@ -1,11 +1,10 @@
 package frontend;
 
-import java.util.Collections;
 import java.util.List;
 
 public class Lexer {
     // returns a list of valid tokens
     public List<Token> scanForTokens(String sourceCode) {
-        return Collections.emptyList();
+        return List.of(new Token("name", TokenType.IDENTIFIER, 3));
     }
 }
